--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "dependencies": {
     "grunt": "~0.4.4",
     "grunt-autoprefixer": "~0.4.2",
-    "grunt-bower-install": "~0.7.0",
     "grunt-concurrent": "~0.4.3",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.7.0",
@@ -18,9 +17,7 @@
     "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-imagemin": "~0.3.0",
-    "grunt-contrib-jshint": "~0.7.2",
     "grunt-contrib-uglify": "~0.2.7",
-    "grunt-google-cdn": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-karma": "~0.8.0",
     "grunt-ngmin": "~0.0.3",
@@ -28,12 +25,10 @@
     "grunt-rev": "~0.1.0",
     "grunt-usemin": "~2.0.2",
     "grunt-svgmin": "~0.2.1",
-    "jshint-stylish": "~0.1.5",
     "karma-ng-html2js-preprocessor": "~0.1.0",
     "karma-ng-scenario": "~0.1.0",
     "time-grunt": "~0.2.10",
-    "karma": "~0.12.0",
-    "load-grunt-tasks": "~0.2.1"
+    "karma": "~0.12.0"   
   },
   "devDependencies": {
     "grunt-contrib-connect": "^0.5.0",
