--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
     "karma-ng-html2js-preprocessor": "~0.1.0",
     "karma-ng-scenario": "~0.1.0",
     "time-grunt": "~0.2.10",
-    "karma": "~0.12.0"   
+    "karma": "~0.12.0"
   },
   "devDependencies": {
     "grunt-contrib-connect": "^0.5.0",
     "karma": "^0.12.9",
     "karma-chrome-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5",
-    "karma-firefox-launcher": "^0.1.3"
+    "karma-firefox-launcher": "^0.1.3",
+    "grunt-karma": "^0.8.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
