--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "title": "Contact List",
   "author": "Diego Freitas Siqueira Souza",
   "main": "Gruntfile.js",
-  "repository" : { 
-      "type" : "git",
-      "url" : "http://github.com/npm/npm.git"
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/npm/npm.git"
   },
   "dependencies": {
-    "express": "4.1.1",
+    "express": "^4.1.1",
     "grunt": "~0.4.4",
     "grunt-autoprefixer": "~0.4.2",
     "grunt-concurrent": "~0.4.3",
@@ -33,7 +33,9 @@
     "karma-ng-html2js-preprocessor": "~0.1.0",
     "karma-ng-scenario": "~0.1.0",
     "time-grunt": "~0.2.10",
-    "karma": "~0.12.0"
+    "karma": "~0.12.0",
+    "body-parser": "^1.0.2",
+    "mongoose": "^3.8.8"
   },
   "devDependencies": {
     "grunt-contrib-connect": "^0.5.0",
