--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "title": "Contact List",
   "author": "Diego Freitas Siqueira Souza",
-  "main": "Gruntfile.js",  
+  "main": "Gruntfile.js",
   "dependencies": {
     "express": "^4.1.1",
     "grunt": "~0.4.4",
@@ -39,7 +39,10 @@
     "karma-chrome-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5",
     "karma-firefox-launcher": "^0.1.3",
-    "grunt-karma": "^0.8.2"
+    "grunt-karma": "^0.8.2",
+    "protractor": "^0.22.0",
+    "grunt-protractor-runner": "^0.2.4",
+    "cors": "^2.3.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
