--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "title": "Contact List",
   "author": "Diego Freitas Siqueira Souza",
   "main": "Gruntfile.js",
+  "scripts": {
+    "install": "./node_modules/protractor/bin/webdriver-manager update"
+  },
   "dependencies": {
     "express": "^4.1.1",
     "grunt": "~0.4.4",
