--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "title": "Contact List",
   "author": "Diego Freitas Siqueira Souza",
   "main": "Gruntfile.js",
-  "scripts": {
-    "install": "./node_modules/protractor/bin/webdriver-manager update"
-  },
   "dependencies": {
     "express": "^4.1.1",
     "grunt": "~0.4.4",
@@ -45,9 +42,13 @@
     "grunt-karma": "^0.8.2",
     "protractor": "^0.22.0",
     "grunt-protractor-runner": "^0.2.4",
-    "cors": "^2.3.0"
+    "cors": "^2.3.0",
+    "express": "^4.2.0",
+    "mongoose": "^3.8.9",
+    "body-parser": "^1.2.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install": "./node_modules/protractor/bin/webdriver-manager update"
   }
 }
