--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "body-parser": "^1.2.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "./node_modules/protractor/bin/webdriver-manager update"
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
