--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "cors": "^2.3.0",
     "express": "^4.2.0",
     "mongoose": "^3.8.9",
-    "body-parser": "^1.2.0"
+    "body-parser": "^1.2.0",
+    "selenium-webdriver": "^2.41.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
