--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "cors": "^2.3.0",
     "express": "^4.2.0",
     "body-parser": "^1.2.0"    
+  },
+  "scripts": {
+    "install": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   }
 }
