--- a/package.json
+++ b/package.json
@@ -10,19 +10,17 @@
     "mongoose": "^3.8.9"
   },
   "devDependencies": {
-    "express": "^4.1.1",
+    "express": "^4.2.0",
     "grunt-contrib-compass": "~0.6.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-karma": "~0.8.0",
-    "body-parser": "^1.0.2",    
+    "grunt-karma": "^0.8.2",
+    "body-parser": "^1.2.0",
     "karma-chrome-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5",
     "karma-firefox-launcher": "^0.1.3",
-    "grunt-karma": "^0.8.2",
     "grunt-protractor-runner": "^0.2.4",
     "cors": "^2.3.0",
-    "express": "^4.2.0",
-    "body-parser": "^1.2.0"    
+    "grunt-contrib-jshint": "^0.10.0"
   },
   "scripts": {
     "install": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
