--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
   "name": "ContactListApplication",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "title": "Contact List",
   "author": "Diego Freitas Siqueira Souza",
+  "description": "Contact list application for test",
   "main": "Gruntfile.js",
+  "engines": {
+    "node": "0.12.x",
+    "npm": "2.5.x"
+  },
   "dependencies": {
+    "body-parser": "^1.12.0",
+    "express": "^4.12.2",
     "grunt": "~0.4.4",
-    "grunt-contrib-connect": "~0.5.0",
-    "mongoose": "^3.8.9"
+    "mongoose": "^3.8.25"
   },
   "devDependencies": {
-    "express": "^4.2.0",
-    "grunt-contrib-compass": "~0.6.0",
-    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-compass": "^1.0.1",
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-html2js": "^0.3.0",
+    "grunt-injector": "^0.6.0",
     "grunt-karma": "^0.8.2",
-    "body-parser": "^1.2.0",
-    "karma-chrome-launcher": "^0.1.3",
-    "karma-jasmine": "^0.1.5",
-    "karma-firefox-launcher": "^0.1.3",
+    "grunt-open": "^0.2.3",
     "grunt-protractor-runner": "^0.2.4",
-    "cors": "^2.3.0",
-    "grunt-contrib-jshint": "^0.10.0"
+    "karma-chrome-launcher": "^0.1.3",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-jasmine": "^0.1.5"
   },
   "scripts": {
     "install": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
