--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "grunt-protractor-runner": "^0.2.4",
     "karma-chrome-launcher": "^0.1.3",
     "karma-firefox-launcher": "^0.1.3",
-    "karma-jasmine": "^0.1.5"
+    "karma-jasmine": "^0.1.5",
+    "karma-phantomjs-launcher": "^0.1.4"
   },
   "scripts": {
     "install": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
