--- a/bower.json
+++ b/bower.json
@@ -6,12 +6,10 @@
   "description": "Contact list application for test",
   "license": "MIT",
   "dependencies": {
-    "angular": "~1.3.14",
+    "angular": "~1.4.0",
     "angular-bootstrap": "~0.12.1",
-    "angular-mocks": "~1.3.14",
-    "angular-route": "~1.3.14"
-  },
-  "devDependencies": {
-    "angular-modal": "~0.5.0"
+    "angular-mocks": "~1.4.0",
+    "angular-route": "~1.4.0",
+    "angular-modal": "~0.4.0"
   }
 }
