--- a/bower.json
+++ b/bower.json
@@ -11,5 +11,8 @@
     "angular-mocks": "~1.4.0",
     "angular-route": "~1.4.0",
     "angular-modal": "~0.4.0"
+  },
+  "devDependencies": {
+    "angular-animate": "~1.3.15"
   }
 }
