--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: node_js
 node_js:
   - '0.12'
 before_script:
-    - npm install -g grunt-cli
+    - npm install
+script:
+	- grunt default
